--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -181,7 +181,7 @@
     display: block;
     margin: 0 1rem;
     padding: 0.5rem 0;
-    color: $masthead-link-color;
+    color: #000; // $masthead-link-color;
     text-decoration: none;
 
     &:hover {
@@ -382,7 +382,7 @@
   .nav__title {
     color: #fff;
     font-size: $type-size-6;
-    background: $primary-color;
+    background: #000; // $primary-color;
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
   }
@@ -398,8 +398,8 @@
   a {
     display: block;
     padding: 0.5rem 1rem;
-    color: $gray;
-    font-size: $type-size-7;
+    color: #000; // $gray;
+    font-size: $type-size-6; // $type-size-7;
     font-weight: bold;
     line-height: 1.5;
     border-bottom: 1px solid $border-color;
