--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -13,7 +13,7 @@
   @include clearfix();
   margin-bottom: 1em;
 
-  @media screen and (min-width: $sidebar-min-width) {
+  @media screen and (min-width: $sidebar-screen-min-width) {
     height: 100vh;
     overflow-y: auto;               // Add scrollbar if the sidebar is too long
     position: fixed;
@@ -95,7 +95,7 @@
 
     @include breakpoint($large) {
       padding: 5px;
-      border: 1px solid $border-color;
+      border: 1px solid var(--global-border-color);
     }
   }
 }
@@ -188,7 +188,7 @@
   margin-top: 15px;
   padding: 10px;
   list-style-type: none;
-  border: 1px solid $border-color;
+  border: 1px solid var(--global-border-color);
   border-radius: $border-radius;
   background: #fff;
   z-index: -1;
@@ -214,7 +214,7 @@
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px;
-    border-color: $border-color transparent;
+    border-color: var(--global-border-color) transparent;
     z-index: 0;
 
     @include breakpoint($large) {
@@ -258,3 +258,5 @@
     }
   }
 }
+
+// Modified by Luis Mendoza
